name:                twhs
version:             0.1.0.0
synopsis:            Get ready for rush hour.
description:         A young police officer must prevent a bomb exploding 
                     aboard a city bus by keeping its speed above 50 mph.
homepage:            https://github.com/evturn/twhs#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Turner
maintainer:          ev@evturn.com
copyright:           Copyright (c) 2018 Evan Turner
category:            Very Cool
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Timeline
                     , Internal
  build-depends:       base >= 4.7 && < 5
                     , authenticate-oauth 
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-extra
                     , containers
                     , directory
                     , filepath
                     , http-conduit
                     , lens
                     , network-uri >= 2.6
                     , process
                     , resourcet
                     , text
                     , transformers
                     , twitter-conduit
                     , twitter-types-lens
  default-language:    Haskell2010

-- executable twhs
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
