name:                twhs
version:             0.1.0.0
synopsis:            Get ready for rush hour.
description:         A young police officer must prevent a bomb exploding 
                     aboard a city bus by keeping its speed above 50 mph.
homepage:            https://github.com/evturn/twhs
license:             BSD3
license-file:        LICENSE
author:              Evan Turner
maintainer:          ev@evturn.com
copyright:           Copyright (c) 2018 Evan Turner
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     TWHS.Status
                     , TWHS.Authentication
  other-modules:       TWHS.CronSimmons 
  build-depends:       base >= 4.7 && < 5
                     , authenticate-oauth 
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-extra
                     , containers
                     , cron
                     , directory
                     , filepath
                     , http-conduit
                     , lens
                     , network-uri >= 2.6
                     , process
                     , resourcet
                     , text
                     , transformers
                     , twitter-conduit
                     , twitter-types-lens
  default-language:    Haskell2010

executable twhs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , authenticate-oauth 
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-extra
                     , containers
                     , cron
                     , directory
                     , filepath
                     , http-conduit
                     , lens
                     , network-uri >= 2.6
                     , process
                     , resourcet
                     , text
                     , transformers
                     , twhs
                     , twitter-conduit
                     , twitter-types-lens

source-repository head
  type:               git
  location:           https://github.com/evturn/twhs
